--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <p>Testing from KB</p>
+    <div>
+        <p style="background-color:DodgerBlue; color:white">Testtestestest WX</p>
+    </div>
 </body>
 </html>
