--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <div>
         <p style="background-color:DodgerBlue; color:white">Testtestestest WX</p>
     </div>
+
+    <p style="background-color: #47bdbd;">Adam is dope as shit</p>
 </body>
 </html>
