--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div class="container-fluid bg-light">
         <p>This is color light</p>
     </div>
+    <div>
+        <a href="map.html">Click here to test the map API</a>
+    </div>
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
