--- a/map.html
+++ b/map.html
@@ -130,6 +130,16 @@
                 }
             };
             
+            // delete all created markers
+            function DeleteMarkers() {
+                for (var i = 0; i < (markers.length)+1; i++) {
+                    //Remove the marker from Map                  
+                    markers[i].setMap(null);
+                }
+                markers = []
+                uniqueId = 1
+            }
+
             // separate list for newly created markers
             var markers = [];
             var uniqueId = 1;
