--- a/index.html
+++ b/index.html
@@ -11,22 +11,49 @@
     <!-- bootstrap css -->
     <link href="css/main.min.css" rel="stylesheet">
 
+    <!-- Font Awesome CSS -->
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
+
     <title>WAD Travels Project</title>
 </head>
 <body>
-    <h1>Test Bootstrap</h1>
+    <div class="container-fluid p-3">
+        <h1 class="mb-3 text-center text-dark">WAD Brothers & Sister</h1>
 
-    <button class="btn btn-primary m-3">Button primary</button>
+        <a href="https://kengboonang.github.io/WADBrothers.github.io/templates/color%20scheme/color_scheme.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                Click Here to see styling notes
+            </button>
+        </a>
+        
+        <a href="map.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                Click here to test the map API
+            </button>
+        </a>
 
-    <div class="container-fluid bg-primary">
-        <p>This is color primary</p>
-    </div>
+        <!-- TEMPLATES ---------------------------------------------------------- -->
+        <hr class="border-top border-dark border-3">
+        <h3 class="mb-3 text-dark text-center">Templates:</h3>
 
-    <div class="container-fluid bg-light">
-        <p>This is color light</p>
-    </div>
-    <div>
-        <a href="map.html">Click here to test the map API</a>
+        <a href="templates/homepage.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                Homepage
+            </button>
+        </a>
+
+        <a href="templates/sidebar.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                Sidebar
+            </button>
+        </a>
+
+        <a href="templates/template.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                Template
+            </button>
+        </a>
+
     </div>
 
     <!-- bootstrap js -->
