--- a/map.html
+++ b/map.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- local css -->
+    <link rel="stylesheet" href="templates/template.css">
+
+    <!-- bootstrap css -->
+    <link href="css/main.min.css" rel="stylesheet">
+
+    <!-- Font Awesome CSS -->
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
+
     <title>Google Map API Testing</title>
     <style>
         /* 
