Added Font Awesome Instructions
Add instructions into styling.html for how to use Font Awesome icons in the pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid p-3">
         <h1 class="mb-3 text-center text-dark">WAD Brothers & Sister</h1>
 
-        <a href="https://kengboonang.github.io/WADBrothers.github.io/templates/color%20scheme/color_scheme.html" class="d-block mb-3 text-center">
+        <a href="templates/styling/styling.html" class="d-block mb-3 text-center">
             <button class="btn btn-main">
                 Click Here to see styling notes
             </button>
@@ -32,8 +32,9 @@
             </button>
         </a>
 
-        <!-- TEMPLATES ---------------------------------------------------------- -->
-        <hr class="border-top border-dark border-3">
+        <!-- TEMPLATES ------------------------------------------------------------>
+        <div class="border-top border-mild-2 border-3 my-4"></div>
+
         <h3 class="mb-3 text-dark text-center">Templates:</h3>
 
         <a href="templates/homepage.html" class="d-block mb-3 text-center">
