DateTime and Date selector add to template.html
Used Flatpickr import to display a date and datetime selector on Template.html page.

Also minor change: Shifted Font Awesome JS import statements to bottom of all pages for performance improvement

--- a/map.html
+++ b/map.html
@@ -11,9 +11,6 @@
     <!-- bootstrap css -->
     <link href="css/main.min.css" rel="stylesheet">
 
-    <!-- Font Awesome CSS -->
-    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
-
     <title>Google Map API Testing</title>
     <style>
         /* 
@@ -216,6 +213,15 @@
 
             window.initMap = initMap;
     </script>
+
+    <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
+    <!-- Font Awesome JS -->
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
+
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    
+    <!-- others -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBw6a6E_r_udr7CXLmLZ-6HspypPd9qvMU&callback=initMap&v=weekly"
       defer
