--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <!-- bootstrap css -->
     <link href="css/main.min.css" rel="stylesheet">
 
-    <!-- Font Awesome CSS -->
-    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
-
     <title>WAD Travels Project</title>
 </head>
 <body>
@@ -56,6 +53,10 @@
         </a>
 
     </div>
+
+    <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
+    <!-- Font Awesome JS -->
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
