minor: added datetime button to index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             </button>
         </a>
 
+        <a href="templates/date_time/date_time.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                DateTime Selector
+            </button>
+        </a>
+
     </div>
 
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
