--- a/map.html
+++ b/map.html
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <!-- pop up if create activity -->
-            <div :style="{display: d_create()}" class="col col-md-4 py-3">
+            <div :style="{display: d_create()}" class="col col-md-5 py-3">
                 <!-- create activity -->
                 <div class="container text-dark">
                     <h3 class="heading">Create an Activity</h3>
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <!-- pop up if edit activity -->
-            <div :style="{display: d_edit()}" class="col col-md-4 py-3">
+            <div :style="{display: d_edit()}" class="col col-md-5 py-3">
                 <div class="container text-dark">
                     <h3 class="heading">Edit Activity</h3>
                     <form>
@@ -439,7 +439,7 @@
                 </div>
             </div>
             <!-- map interface -->
-            <div class="col col-md-9 py-3">
+            <div class="col col-md-6 py-3">
                 <!-- map details -->
                 <div :style="{width:map_width}" id="map"></div><button style="position: absolute; bottom: 0px; right: 70px;" class="btn btn-main-fixed" @click="create_true=true,edit_true=false,map_width='65%'">Create Activity</button>
                 
@@ -925,6 +925,8 @@
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
+    <!-- activity js -->
     
+    <script src="./templates/create_activities/main.js"></script>
 </body>
 </html>
