new button in index page to flight page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             </button>
         </a>
 
+        <a href="templates/flight_page/flight_page.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                Flight Page
+            </button>
+        </a>
+
     </div>
 
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
