Added lodging button to index page

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
             </button>
         </a>
 
+        <a href="templates/lodging/lodging.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                Lodging Page
+            </button>
+        </a>
+
     </div>
 
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
