--- a/map.html
+++ b/map.html
@@ -68,7 +68,7 @@
         <div class="row sidebar-parent flex-nowrap">
             <div id="nav" class="col-3 sidebar-css">
                  <!-- SIDEBAR  -->
-                <sidebar-general></sidebar-general>
+                <sidebar-phase2></sidebar-phase2>
             </div>
 
             <!-- whole site -->
@@ -374,7 +374,7 @@
                     <!-- map interface MAP COL -->
                     <div class="col" id="app" style="width: 80vw; height: 80vh">
                         <!-- map details -->
-                        <div :style="{width:map_width}" id="map"></div><button style="position: absolute; bottom: 0px; right: 70px;" class="btn btn-main-fixed" @click="create_true=true,edit_true=false,map_width='65%'">Create Activity</button>
+                        <div id="map"></div><button style="position: absolute; bottom: 0px; right: 70px;" class="btn btn-main-fixed" @click="create_true=true,edit_true=false">Create Activity</button>
                     </div>    
                 </div>
             </div>
