--- a/map.html
+++ b/map.html
@@ -34,7 +34,6 @@
         html,
         body {
         height: 100%;
-        margin: 10px;
         padding: 0;
         }
         .address{
@@ -372,7 +371,7 @@
                 
     
                     <!-- map interface MAP COL -->
-                    <div class="col" id="app" style="width: 90vw; height: 90vh">
+                    <div class="col" style="width: 90vw; height: 90vh">
                         <!-- map details -->
                         <div id="map"></div><button style="position: absolute; bottom: 0px; right: 70px;" class="btn btn-main-fixed" @click="create_true=true,edit_true=false">Create Activity</button>
                     </div>    
