--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
             </button>
         </a>
         
-        <a href="map.html" class="d-block mb-3 text-center">
+        <a href="map_phase2.html" class="d-block mb-3 text-center">
             <button class="btn btn-main">
-                Click here to test the map API
+                Click here to test the phase 2 map API
+            </button>
+        </a>
+
+        <a href="map_phase3.html" class="d-block mb-3 text-center">
+            <button class="btn btn-main">
+                Click here to test the phase 3 map API
             </button>
         </a>
 
