--- a/map_phase2 copy.html
+++ b/map_phase2 copy.html
@@ -410,7 +410,7 @@
                 
                 vm_vue.vm.$data.edit_true = true
                 vm_vue.vm.$data.create_true = false
-                vm_vue.vm.$data.marker_id = event.target.querySelector("div[id='get_marker_id']").innerText
+                vm_vue.vm.$data.marker_id = obj.querySelector("div[id='get_marker_id']").innerText
                 
             } else {
                 vm_vue.vm.$data.edit_true = false
