updating phase 3 to fetch from database

--- a/map_phase3.html
+++ b/map_phase3.html
@@ -17,7 +17,8 @@
     <!-- <link rel="stylesheet" href="./templates/"> -->
     <link rel="stylesheet" href="./templates/template.css">
     <!-- access firebase -->
-    <script type="module" src="./map_CRUD_database.js"></script>
+    <!-- reference js -->
+    <script type="module" src="./map_phase3_js.js"></script>
     <style>
         /* 
         * Always set the map height explicitly to define the size of the div element
@@ -249,8 +250,5 @@
 
     <!-- listview js -->
     <script src="./templates/activity_card_listview/script.js"></script>
-
-    <!-- reference js -->
-    <script src="./map_phase3_js.js"></script>
 </body>
 </html>
