--- a/map_phase3.html
+++ b/map_phase3.html
@@ -66,7 +66,7 @@
 <body>
     <div class="container-fluid">
         <div class="row sidebar-parent flex-nowrap">
-            <div id="nav" class="col-2 sidebar-css">
+            <div id="nav" class="col-auto sidebar-css">
                  <!-- SIDEBAR  -->
                 <sidebar-phase3></sidebar-phase3>
             </div>
