--- a/map_phase2.html
+++ b/map_phase2.html
@@ -210,7 +210,7 @@
                                             </div>
                                             <div class="modal-footer">
                                             <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal" >Close</button>
-                                            <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="create_true=false, back_from_create_activity(current_id), autocomplete.set('place', null);">Confirm</button>
+                                            <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="create_true=false, delete_marker(current_id), autocomplete.set('place', null);">Confirm</button>
                                             </div>
                                         </div>
                                         </div>
@@ -233,7 +233,7 @@
                                 <div class="row">
                                     <div class="col-7">
                                         <div class="form-floating mb-3">
-                                            <input type="text" class="form-control" id="input_place" placeholder="Add a Place">
+                                            <input type="text" class="form-control" v-model="selected_name" placeholder="Add a Place">
                                             <label for="input_place">Add a Place</label>
                                         </div>
                                     </div>
@@ -339,8 +339,9 @@
                                 <!-- DELETE AND CONFIRM ACTIVITY BUTTON  -->
                                 <div class="buttons">                         
                                     <button type="button" class="btn btn-main-bold-fixed" data-bs-toggle="modal" data-bs-target="#del_button_modal">Delete</button>
+                                    <button type="button" class="btn save_button btn-main-fixed" @click="edit_true=false">Cancel</button>
                                     <!-- should write data to db and update infoWindow -->
-                                    <button type="button" class="btn save_button btn-main-fixed" @click="edit_true=false,map_width='90%'">Save</button>
+                                    <button type="button" class="btn save_button btn-main-fixed" @click="edit_true=false,create_update_data()">Save</button>
     
                                     <!-- Back Button Modal -->
                                     <div class="modal fade" id="del_button_modal" tabindex="-1" aria-labelledby="del_button_modal_label1" aria-hidden="true">
@@ -355,7 +356,7 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                 <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal" >Close</button>
-                                                <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="edit_true=false, delete_marker(current_id)">Confirm</button>
+                                                <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="edit_true=false, delete_marker_edit(current_id)">Confirm</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -406,7 +407,7 @@
         // access vm from module script and open up edit view
         async function set_edit(obj) {
             var vm_vue = await import("./map_js.js")
-            console.log(obj)
+            // console.log(obj)
             if (vm_vue.vm.$data.edit_true == false) {
                 
                 vm_vue.vm.$data.edit_true = true
