--- a/map_phase2_styling_test.html
+++ b/map_phase2_styling_test.html
@@ -72,7 +72,7 @@
             
             <!-- whole site -->
             <!-- ALL OTHER CONTENT ACTIVITY COL-->
-            <div class="col" id="app">
+            <div class="col position-relative" id="app">
                 <div class="row">
                     <!-- pop up if create activity -->
                     <div :style="{display: d_create()}" class="col-12 col-md-auto py-3">
@@ -374,8 +374,8 @@
                         <!-- map details -->
                         <div id="map"></div>
                         
-                        <div style="position: fixed; bottom: 50px; right: 50px; width: 20vw;" class="d-flex justify-content-center">
-                            <button class="btn btn-main dropshadow-btn-main" @click="create_true=true,edit_true=false">
+                        <div style="position: absolute; bottom: 5%; width: 100%;" class="d-flex justify-content-center">
+                            <button class="btn btn-main dropshadow-btn-main mx-5" @click="create_true=true,edit_true=false">
                                 <h4 class="my-auto mx-2">
                                     Create Activity
                                 </h4>
