--- a/map_phase2.html
+++ b/map_phase2.html
@@ -195,7 +195,7 @@
                                     <!-- important to add type="button" so that the button doesn't submit and refresh the page -->
                                     <button type="button" class="btn back_button btn-main-bold-fixed" data-bs-toggle="modal" data-bs-target="#back_button_modal" >Back</button>
                                     <!-- should write data to db and update InfoWindow -->
-                                    <button type="button" class="btn create_button btn-main-fixed" @click="create_true=false , create_update_data()">Create</button>
+                                    <button type="button" class="btn create_button btn-main-fixed" @click="create_true=false , create_new_data()">Create</button>
     
                                     <!-- Back Button Modal -->
                                     <div class="modal fade" id="back_button_modal" tabindex="-1" aria-labelledby="back_button_modal_label1" aria-hidden="true">
@@ -409,7 +409,7 @@
             var vm_vue = await import("./map_js.js")
             // console.log(obj)
             if (vm_vue.vm.$data.edit_true == false) {
-                
+                console.log(obj)
                 vm_vue.vm.$data.edit_true = true
                 vm_vue.vm.$data.create_true = false
                 vm_vue.vm.$data.current_id = obj.querySelector("div[id='get_marker_id']").innerText
