--- a/map_phase3.html
+++ b/map_phase3.html
@@ -156,7 +156,7 @@
                         <!-- FIRST ITEM (SAMPLE 1) -->
                         <!-- COPY FROM HERE -->
                         <div id="main">
-                            <div class="container mb-3" v-for="(location, index) of existing_locations">
+                            <div class="container mb-3" v-for="(location, index) of locations">
                                 <div class="accordion" id="accordionFlushExample">
                                     <div class="accordion-item" >
                                 
