converting activity card listview

--- a/map_phase3.html
+++ b/map_phase3.html
@@ -93,7 +93,7 @@
                         <!-- FIRST ITEM (SAMPLE 1) -->
                         <!-- COPY FROM HERE -->
                         <div id="main">
-                            <div class="container mb-3" v-for="(location, index) of existing_locations">
+                            <div class="container mb-3" v-for="(location, index) of locations">
                                 <div class="accordion" id="accordionFlushExample">
                                     <div class="accordion-item" >
                                         <!-- ACCORDION TITLE -->
@@ -176,7 +176,7 @@
     <!-- sidebar js -->
     <script src="./templates/pages/sidebars.js"></script>
 
-    <!-- listview js -->
-    <script src="./templates/activity_card_listview/script.js"></script>
+    <!-- listview js
+    <script src="./templates/activity_card_listview/script.js"></script> -->
 </body>
 </html>
