--- a/map_phase2.html
+++ b/map_phase2.html
@@ -126,7 +126,7 @@
                                             <div class="row g-0">
                                                 <div class="col-8">
                                                     <div class="form-floating mb-3">
-                                                        <input type="text" class="form-control" id="input_place" placeholder="Add a Place" v-model="amount" v-on:change="calculate_to_from()">
+                                                        <input type="number" class="form-control" id="input_place" placeholder="Add a Place" v-model="amount" v-on:change="calculate_to_from()">
                                                         <label for="input_place">Enter the Cost/person</label>
                                                     </div>
                                                 </div>    
@@ -159,7 +159,7 @@
                                         <div class="row g-0">
                                             <div class="col-8">
                                                 <div class="form-floating mb-3">
-                                                    <input type="text" class="form-control" id="input_place" placeholder="Add a Place" v-model="converted_amount" @change="calculate_from_to()">
+                                                    <input type="number" class="form-control" id="input_place" placeholder="Add a Place" v-model="converted_amount" @change="calculate_from_to()">
                                                     <label for="input_place">Enter the Cost/person</label>
                                                 </div>   
                                             </div> 
@@ -272,7 +272,7 @@
                                         <div class="row g-0">
                                             <div class="col-8">
                                                 <div class="form-floating mb-3">
-                                                    <input type="text" class="form-control" id="input_place" placeholder="Add a Place" v-model="amount" v-on:change="calculate_to_from()">
+                                                    <input type="number" class="form-control" id="input_place" placeholder="Add a Place" v-model="amount" v-on:change="calculate_to_from()">
                                                     <label for="input_place">Enter the Cost/person</label>
                                                 </div>
                                             </div>    
@@ -305,7 +305,7 @@
                                         <div class="row g-0">
                                             <div class="col-8">
                                                 <div class="form-floating mb-3">
-                                                    <input type="text" class="form-control" id="input_place" placeholder="Add a Place" v-model="converted_amount" @change="calculate_from_to()">
+                                                    <input type="number" class="form-control" id="input_place" placeholder="Add a Place" v-model="converted_amount" @change="calculate_from_to()">
                                                     <label for="input_place">Enter the Cost/person</label>
                                                 </div>   
                                             </div> 
@@ -409,12 +409,12 @@
             var vm_vue = await import("./map_js.js")
             // console.log(obj)
             if (vm_vue.vm.$data.edit_true == false) {
-                console.log(obj)
+                // console.log(obj)
                 vm_vue.vm.$data.edit_true = true
                 vm_vue.vm.$data.create_true = false
                 vm_vue.vm.$data.current_id = obj.querySelector("div[id='get_marker_id']").innerText
-                console.log(obj.querySelector("div[id='get_marker_id']").innerText)
-                console.log(`${vm_vue.vm.$data.current_id} this is from set_edit`)
+                // console.log(obj.querySelector("div[id='get_marker_id']").innerText)
+                // console.log(`${vm_vue.vm.$data.current_id} this is from set_edit`)
                 vm_vue.vm.retrieve_edit_activity_info(vm_vue.vm.$data.current_id)
             } else {
                 vm_vue.vm.$data.edit_true = false
