updating activity card to talk to database
and also to finally clear autocomplete

--- a/map_phase2.html
+++ b/map_phase2.html
@@ -85,8 +85,8 @@
                                 <div class="row">
                                     <div class="col-7">
                                         <div class="form-floating mb-3">
-                                            <input type="text" class="form-control" id="autocomplete" placeholder="Start by typing a location here...">
-                                            <label for="input_place">Start by typing a location here...</label>
+                                            <input type="text" class="form-control" id="autocomplete">
+                                            <label for="input_place" id="autcomplete_input">Start by typing a location here...</label>
                                         </div>
                                     </div>
                                     <!-- TAG -->
