--- a/map_phase3.html
+++ b/map_phase3.html
@@ -28,8 +28,8 @@
         * that contains the map. 
         */
         #map {
-        height: 95%;
-        width: 65%;
+            height: 100%;
+            width: 100%;
         }
 
         /* 
@@ -200,13 +200,22 @@
                     </div>
                 </div>
                     
-                    <!-- map interface MAP COL -->
-                    <div class="col overflowing2" style="width: 90vw; height: 90vh" :style="{display: toggle_map()}">
+                    <!-- map interface MAPview COL -->
+                    <div class="col overflowing2" style="width: 100%; height: 100vh" :style="{display: toggle_map()}">
                         <!-- map details -->
-                        <div id="map"></div><button style="position: absolute; bottom: 0px; right: 70px;" class="btn btn-main-fixed" @click="create_true=true,edit_true=false">Create Activity</button>
+                        <div id="map"></div>
+
+                        <!-- create activity buttn -->
+                        <div style="position: absolute; bottom: 5%; width: 100%;" class="d-flex justify-content-center">
+                            <button class="btn btn-main dropshadow-btn-main mx-5" @click="create_true=true,edit_true=false">
+                                <h4 class="my-auto mx-2">
+                                    Create Activity
+                                </h4>
+                            </button>
+                        </div>
                     </div>
 
-                    <!-- collapsible card MAP COL -->
+                    <!-- collapsible card listview COL -->
                     <div class="col" :style="{display: toggle_collapse()}">
                         <h4 class="m-5">Activities </h4>
 
@@ -279,6 +288,8 @@
                         <button type="button" class="btn btn-main-fixed save_btn" @click="create_days_data()">Save Changes</button>
                     </div>
                 </div>
+
+                
             </div>
         </div>
 
