--- a/map_phase2.html
+++ b/map_phase2.html
@@ -398,7 +398,7 @@
                 
                 <!-- TRIP DETAILS -->
                 <div class="trip-title-top-md d-none d-md-block text-dark text-center">
-                    <h5>Name of Trip (Trip to {{get_capital_city(get_country_code(trip_details.country)) }}, {{trip_details.country}})</h5>
+                    <h5>Name of Trip (Trip to {{trip_details.country}})</h5>
                     <p>{{trip_details.duration}}</p>
                 </div>
             </div>
