--- a/map_phase2.html
+++ b/map_phase2.html
@@ -83,7 +83,7 @@
             <div class="col position-relative text-dark" id="app">
                 <!-- TRIP DETAILS (SM) -->
                 <div class="row d-block d-md-none text-center blurred text-black">
-                    <h5 class="pt-3">{{get_trip_name(trip_id)}} ({{trip_details.country}})</h5>
+                    <h5 class="pt-3">{{get_trip_name(trip_id)}} ({{trip_details.destination}})</h5>
                     <p class="m-0 pb-3">{{trip_details.duration}}</p>
                 </div>
 
@@ -405,7 +405,7 @@
                 
                 <!-- TRIP DETAILS -->
                 <div class="trip-title-top-md d-none d-md-block text-dark text-center">
-                    <h5>{{get_trip_name(trip_id)}} ({{trip_details.country}})</h5>
+                    <h5>{{get_trip_name(trip_id)}} ({{trip_details.destination}})</h5>
                     <p>{{trip_details.duration}}</p>
                 </div>
             </div>
