Images edited map phase 3

--- a/map_phase3.html
+++ b/map_phase3.html
@@ -24,7 +24,7 @@
 
     <style>
         body{
-            background-image: url("../../images/home_page/main_images/main_page_bg_1.jpg");
+            background-image: url("images/home_page/main_images/main_page_bg_1.jpg");
             background-size: cover;
             background-attachment: fixed;
         }
