--- a/map_phase2.html
+++ b/map_phase2.html
@@ -443,7 +443,7 @@
                 vm_vue.vm.$data.create_true = false
                 vm_vue.vm.$data.current_id = obj.querySelector("div[id='get_marker_id']").innerText
                 // console.log(obj.querySelector("div[id='get_marker_id']").innerText)
-                // console.log(`${vm_vue.vm.$data.current_id} this is from set_edit`)
+                console.log(`${vm_vue.vm.$data.current_id} this is from set_edit`)
                 vm_vue.vm.retrieve_edit_activity_info(vm_vue.vm.$data.current_id)
             } else {
                 vm_vue.vm.$data.edit_true = false
