added bg image to phase 2, linked phase 3 to 4

--- a/map_phase2.html
+++ b/map_phase2.html
@@ -33,8 +33,11 @@
         */
         html,
         body {
-        height: 100%;
-        padding: 0;
+            height: 100%;
+            padding: 0;
+            background-image: url("images/home_page/main_images/main_page_bg_1.jpg");
+            background-size: cover;
+            background-attachment: fixed;
         }
 
         body{
