--- a/map_phase2.html
+++ b/map_phase2.html
@@ -353,7 +353,11 @@
                                 <!-- DELETE AND CONFIRM ACTIVITY BUTTON  -->
                                 <div class="buttons">                         
                                     <button type="button" class="btn btn-main-bold-fixed" data-bs-toggle="modal" data-bs-target="#del_button_modal">Delete</button>
-                                    <button type="button" class="btn save_button btn-main-fixed mx-2" @click="edit_true=false">Cancel</button>
+                                    <button type="button" class="btn save_button btn-main-fixed mx-2" @click="edit_true=false,              selected_address ='',
+                                    tag_input = '',
+                                    selected_description = '',
+                                    amount = '',
+                                    converted_amount = ''">Cancel</button>
                                     <!-- should write data to db and update infoWindow -->
                                     <button type="button" class="btn save_button btn-main-fixed" @click="edit_true=false,create_update_data()">Save</button>
     
