--- a/map_phase2.html
+++ b/map_phase2.html
@@ -75,7 +75,7 @@
         <div class="row sidebar-parent flex-nowrap">
             <div id="nav" class="col-auto sidebar-css p-0 blurred-minor-2">
                  <!-- SIDEBAR  -->
-                <sidebar-phase2 :comp_username="username"></sidebar-phase2>
+                <sidebar-phase2 :comp_username="username" :comp_user_pic="user_pic"></sidebar-phase2>
             </div>
             
             <!-- whole site -->
