--- a/map_phase2.html
+++ b/map_phase2.html
@@ -227,7 +227,7 @@
                                             </div>
                                             <div class="modal-footer">
                                             <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal" >Close</button>
-                                            <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="create_true=false, delete_marker(current_id)">Confirm</button>
+                                            <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="create_true=false, delete_marker(current_id)" onclick="document.location.reload(true)">Confirm</button>
                                             </div>
                                         </div>
                                         </div>
