--- a/map_phase3.html
+++ b/map_phase3.html
@@ -100,9 +100,13 @@
 
                 <div class="col-auto sticky-top">
                     <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                        <a href="https://kengboonang.github.io/WADBrothers.github.io/templates/pages/trips-homepage.html" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                            <img src="https://kengboonang.github.io/WADBrothers.github.io/Logo.png" width="120">
+                        <a href="https://kengboonang.github.io/WADBrothers.github.io/templates/pages/trips-homepage.html" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-dark text-decoration-none d-none d-sm-inline">
+                            <img src="https://kengboonang.github.io/WADBrothers.github.io/Logo.png" width="120">         
                         </a>
+                        <a href="https://kengboonang.github.io/WADBrothers.github.io/templates/pages/trips-homepage.html" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-dark text-decoration-none d-sm-none">
+                            <img src="https://kengboonang.github.io/WADBrothers.github.io/Logo-SMALL.png">         
+                        </a>
+                        
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                             
                             <!--Home-->
