--- a/map_phase2-MEMBERVIEW.html
+++ b/map_phase2-MEMBERVIEW.html
@@ -68,7 +68,7 @@
         <div class="row sidebar-parent flex-nowrap">
             <div id="nav" class="col-auto sidebar-css">
                  <!-- SIDEBAR  -->
-                <sidebar-member-phase2 :comp_username="username" :comp_user_pic="user_pic"></sidebar-member-phase2>
+                <sidebar-member-phase2 :comp_username="username" :comp_user_pic="user_pic" v-on:btnclick="sign_out"></sidebar-member-phase2>
             </div>
             
             <!-- whole site -->
