--- a/map_phase3.html
+++ b/map_phase3.html
@@ -106,7 +106,7 @@
                         <a href="https://kengboonang.github.io/WADBrothers.github.io/templates/pages/trips-homepage.html" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-dark text-decoration-none d-sm-none">
                             <img src="https://kengboonang.github.io/WADBrothers.github.io/Logo-SMALL.png">         
                         </a>
-                        
+
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                             
                             <!--Home-->
@@ -158,7 +158,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="https://kengboonang.github.io/WADBrothers.github.io/templates/pages/signup_login%20pages/login_page.html" @click.native="sign_out()">Sign out</a></li>
+                                <li><a class="dropdown-item" href="https://kengboonang.github.io/WADBrothers.github.io/templates/pages/signup_login%20pages/login_page.html" @click="$emit('btnclick')">Sign out</a></li>
                             </ul>
                         </div>
 
